--- a/src/LMSupplyDepots.Tools.HuggingFace.SampleConsoleApp/LMSupplyDepots.Tools.HuggingFace.SampleConsoleApp.csproj
+++ b/src/LMSupplyDepots.Tools.HuggingFace.SampleConsoleApp/LMSupplyDepots.Tools.HuggingFace.SampleConsoleApp.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.1" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="9.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
