Update LLamaEngine to .NET 9.0 with new features
- Updated project files for .NET 9.0 and added package references for dependency injection and logging.
- Introduced new classes and interfaces for local model management, backend service detection (CUDA and Vulkan), and system monitoring.
- Modified `Program.cs` to implement an interactive chat loop with the AI model.
- Added/updated unit tests in `LLamaBackendServiceTests`, `LocalLLMServiceTests`, `LocalModelManagerTests`, and `SystemMonitorServiceTests`.
- Created/updated `README.md` for project documentation and usage instructions.
- Added `LoggerExtensions` for improved logging capabilities.
- Enhanced `LocalModelInfo` with methods for parsing identifiers.
- Added `ParameterFactory` for streamlined inference parameter creation.
- Updated solution file to reflect new project structure and dependencies.

--- a/src/LMSupplyDepots.LLamaEngine.Tests/LMSupplyDepots.LLamaEngine.Tests.csproj
+++ b/src/LMSupplyDepots.LLamaEngine.Tests/LMSupplyDepots.LLamaEngine.Tests.csproj
@@ -4,16 +4,18 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+
     <IsPackable>false</IsPackable>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="coverlet.collector" Version="6.0.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
-    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2">
       <PrivateAssets>all</PrivateAssets>
@@ -22,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LMSupplyDepots.Tools.HuggingFace\LMSupplyDepots.Tools.HuggingFace.csproj" />
+    <ProjectReference Include="..\LMSupplyDepots.LLamaEngine\LMSupplyDepots.LLamaEngine.csproj" />
   </ItemGroup>
 
   <ItemGroup>
