--- a/.github/workflows/hostapp.yml
+++ b/.github/workflows/hostapp.yml
@@ -4,7 +4,6 @@ name: Build and Release
 on:
   push:
     tags:
-      - 'v*'          # v1.0.0, v2.1.3 등
       - 'hostapp_v*'  # hostapp_v0.1.0 등
 
 jobs:
@@ -20,14 +19,22 @@ jobs:
       with:
         dotnet-version: '9.0.x'
         
+    - name: 🔍 Debug project structure
+      run: |
+        echo "Current directory contents:"
+        Get-ChildItem -Path . -Recurse -Name "*.csproj" | Where-Object { $_ -like "*HostApp*" }
+        echo "Checking src directory:"
+        Get-ChildItem -Path "src/" -Recurse -Name "*.csproj" | Where-Object { $_ -like "*HostApp*" }
+      shell: powershell
+        
     - name: 📦 Restore dependencies
       run: dotnet restore src/
       
     - name: 🔨 Build and Publish
       run: |
-        dotnet publish "src/LMSupplyDepots.HostApp/" `
+        dotnet publish src/LMSupplyDepots.HostApp/LMSupplyDepots.HostApp.csproj `
           -c Release `
-          -o "output/host-app" `
+          -o output/host-app `
           --self-contained true `
           -r win-x64 `
           /p:PublishSingleFile=true `
